# llm-config

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runner.py
.github/workflows/: ci.yml  ruff.toml
config/: api.py  base.py  configs.py  util.py
config/templates/: deepseek-v3-671B.ini
docs/: design_draft.md
llm_config/: api.py  base.py  configs.py  runner.py  util.py
llm_config/config/: api.py  base.py  configs.py
llm_config/config/templates/: deepseek-v3-671B.ini  llama-3-8B.ini  mla.ini  moe.ini  test_model.ini
tests/: README.md  test_api.py  test_system.py
tests/fixtures/: broken_wan.ini  deepseek_kdn.ini  legacy_model.ini  wan_multimodal.ini
tests/templates/: test-llama-3-8B.ini  test-mla.ini  test-moe.ini  test_deepseek-v3-671B.ini
